--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "react-flux-store-examples",
   "dependencies": {
-    "react": "*"
+    "babel-preset-react": "^6.1.18",
+    "babelify": "^7.2.0",
+    "browserify": "*",
+    "react": "^0.14.3",
+    "react-dom": "^0.14.3"
   }
 }
