--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "dependencies": {
     "babel-preset-react": "^6.1.18",
     "babelify": "^7.2.0",
-    "browserify": "*",
+    "browserify": "^12.0.1",
     "react": "^0.14.3",
     "react-dom": "^0.14.3"
   }
